Issue #3260, remove unexpected page breaks in answer key

--- a/css/ccap-principles-management.css
+++ b/css/ccap-principles-management.css
@@ -3413,17 +3413,21 @@ div.colophon.end-of-book-solutions div.chapter-area:first-of-type h2.title {
   margin-top: 0;
   padding-top: 0;
 }
+div.colophon.end-of-book-solutions .chapter-area {
+  margin-bottom: 8px;
+}
 div.colophon.end-of-book-solutions .chapter-area a.solution {
   color: #242424;
   font-weight: bold;
+}
+div.colophon.end-of-book-solutions .chapter-area > h2.title {
+  margin-bottom: 8px;
 }
 div.colophon.end-of-book-solutions .chapter-area > h2.title a.chapter {
   color: #242424;
   font-size: 15.6px;
   font-weight: 700;
   font-family: 'Noto Sans', sans-serif;
-  display: block;
-  margin-bottom: 8px;
   page-break-before: avoid;
   page-break-after: avoid;
 }
