--- a/css/refactor/themes/business/mixins/titles.less
+++ b/css/refactor/themes/business/mixins/titles.less
@@ -171,9 +171,7 @@ h1, h2, h3, h4 {
   .font-scale(1);
   font-weight: 700;
   font-family: @font-family;
-  display: block;
   // margin-bottom: 7.5px;
-  .scale-padding(-2, margin-bottom);
   #utils>#pb>.after(avoid);
 }
 
